<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Kolibree. All rights reserved
  ~
  ~ Copying this file via any medium without the prior written consent of Kolibree is strictly
  ~ prohibited
  ~
  ~ Proprietary and confidential
  -->

<layout>

  <data>

    <variable
      name="viewModel"
      type="com.kolibree.android.glimmer.tweaker.led.signal.LedSignalViewModel" />

    <import type="android.view.View" />

    <import type="com.kolibree.android.glimmer.binding.SimpleItemWithBinding" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/dot_double"
    android:paddingTop="@dimen/dot_double"
    android:paddingEnd="@dimen/dot_double">

    <Button
      android:id="@+id/play_led_pattern"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewModel.onPlayButtonClick()}"
      android:text="@string/play_led_signal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/match_constraints"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@id/play_led_pattern"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dot">

        <com.kolibree.android.glimmer.utils.NumberPicker
          android:id="@+id/red"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:enabled="@{true}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:max="@{100}"
          app:min="@{0}"
          app:value="@{viewModel.red}" />

        <TextView
          android:id="@+id/red_hint"
          style="@style/SettingsHint"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:text="@string/play_led_signal_red"
          app:layout_constraintBottom_toBottomOf="@id/red"
          app:layout_constraintEnd_toStartOf="@id/red"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/red" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dot">

        <com.kolibree.android.glimmer.utils.NumberPicker
          android:id="@+id/green"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:enabled="@{true}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:max="@{100}"
          app:min="@{0}"
          app:value="@{viewModel.green}" />

        <TextView
          android:id="@+id/green_hint"
          style="@style/SettingsHint"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:text="@string/play_led_signal_green"
          app:layout_constraintBottom_toBottomOf="@id/green"
          app:layout_constraintEnd_toStartOf="@id/green"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/green" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dot">

        <com.kolibree.android.glimmer.utils.NumberPicker
          android:id="@+id/blue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:enabled="@{true}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:max="@{100}"
          app:min="@{0}"
          app:value="@{viewModel.blue}" />

        <TextView
          android:id="@+id/blue_hint3"
          style="@style/SettingsHint"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:text="@string/play_led_signal_blue"
          app:layout_constraintBottom_toBottomOf="@id/blue"
          app:layout_constraintEnd_toStartOf="@id/blue"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/blue" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dot">

        <TextView
            android:id="@+id/led_pattern_hint"
            style="@style/SettingsHint"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginEnd="@dimen/dot_trip"
            android:text="@string/play_led_signal_pattern"
            app:layout_constraintBottom_toBottomOf="@+id/led_pattern_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/led_pattern_spinner" />

        <Spinner
            android:id="@+id/led_pattern_spinner"
            style="@style/SettingSpinner"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:selectedItemPosition="@={viewModel.patternPosition}"
            android:textAlignment="textEnd"
            app:enabled="@{true}"
            app:itemBinding="@{SimpleItemWithBinding.simpleItemBinding}"
            app:itemDropDownLayout="@{SimpleItemWithBinding.simpleLayout}"
            app:items="@{viewModel.patterns}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/led_pattern_hint"
            app:layout_constraintTop_toTopOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dot"
        android:visibility="@{viewModel.isPeriodModifiable ? View.VISIBLE : View.GONE}">

        <com.kolibree.android.glimmer.utils.NumberPicker
          android:id="@+id/period"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:enabled="@{true}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:max="@{65535}"
          app:min="@{0}"
          app:value="@{viewModel.period}" />

        <TextView
          android:id="@+id/period_hint"
          style="@style/SettingsHint"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:text="@string/play_led_signal_period_ms"
          app:layout_constraintBottom_toBottomOf="@id/period"
          app:layout_constraintEnd_toStartOf="@id/period"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/period" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dot">

        <com.kolibree.android.glimmer.utils.NumberPicker
          android:id="@+id/duration"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:enabled="@{true}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:max="@{65535}"
          app:min="@{0}"
          app:value="@{viewModel.durationLiveData}" />

        <TextView
          android:id="@+id/duration_hint"
          style="@style/SettingsHint"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:text="@string/duration_ms"
          app:layout_constraintBottom_toBottomOf="@id/duration"
          app:layout_constraintEnd_toStartOf="@id/duration"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/duration" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

