<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Kolibree. All rights reserved
  ~
  ~ Copying this file via any medium without the prior written consent of Kolibree is strictly
  ~ prohibited
  ~
  ~ Proprietary and confidential
  -->

<layout>

  <data>

    <variable
        name="viewModel"
        type="com.kolibree.android.glimmer.tweaker.led.special.SpecialLedViewModel" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingStart="@dimen/dot_double"
      android:paddingTop="@dimen/dot_double"
      android:paddingEnd="@dimen/dot_double">

    <Button
        android:id="@+id/play_led_pattern"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewModel.onApplyButtonClick()}"
        android:text="@string/special_led_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraints"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/play_led_pattern"
        app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dot">

        <TextView
            android:id="@+id/led_hint"
            style="@style/SettingsHint"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginEnd="@dimen/dot_trip"
            android:text="@string/special_led_hint"
            app:layout_constraintBottom_toBottomOf="@+id/led_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/led_spinner" />

        <Spinner
            android:id="@+id/led_spinner"
            style="@style/SettingSpinner"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/led_hint"
            app:layout_constraintTop_toTopOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>


      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/dot">

        <com.kolibree.android.glimmer.utils.NumberPicker
            android:id="@+id/pwm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:enabled="@{true}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:max="@{255}"
            app:min="@{0}"
            app:value="@{viewModel.pwm}" />

        <TextView
            android:id="@+id/pwm_hint"
            style="@style/SettingsHint"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/special_led_pwm"
            app:layout_constraintBottom_toBottomOf="@id/pwm"
            app:layout_constraintEnd_toStartOf="@id/pwm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pwm" />

      </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

